--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
     font-family: 'Darumadrop One', sans-serif;
 } */
 
+html {
+  scroll-behavior: smooth;
+}
+
 .animated-border {
   border: 3px solid;
   border-radius: 1px;
@@ -34,3 +38,8 @@
     initial-value: 0deg;
     inherits: false;
   }
+
+.footer {
+  background-image: url("./assets/footer-bg.svg");
+  background-repeat: no-repeat;
+}
